gutenprint (5.0.0-beta3-1) unstable; urgency=low

  * New upstream beta release.
  * gimp-print:
    - Install the plug-in into the GIMP 2.0 plug-in directory rather
      than the 1.2 directory.
    - Don't install a duplicate copy of FAQ.html.

 -- Roger Leigh <rleigh@debian.org>  Tue, 16 Nov 2004 22:40:23 +0000

gutenprint (5.0.0-beta2-1) unstable; urgency=low

  * New upstream beta release.
  * Renamed package to gutenprint.  The following packages were
    renamed in consequence:
    - cupsys-driver-gimpprint renamed to cupsys-driver-gutenprint
    - foomatic-db-gimp-print renamed to foomatic-db-gutenprint
    - gimpprint-doc renamed to gutenprint-doc
    - gimpprint-locales renamed to gutenprint-locales
    - ijsgimpprint renamed to ijsgutenprint
    - libgimpprint renamed to libgutenprint
    - libgimpprint-dev renamed to libgutenprint-dev
    - libgimpprint-doc renamed to libgutenprint-doc
  * New packages:
    - libgimpprintui (GTK+ 1.2 UI library)
    - libgimpprintui-dev (GTK+ 1.2 UI library headers)
    - libgimpprintui2 (GTK+ 2.0 UI library)
    - libgimpprintui2-dev (GTK+ 2.0 UI library headers)
  * libgutenprint-dev: drop static libgutenprint.a

 -- Roger Leigh <rleigh@debian.org>  Sun, 12 Sep 2004 15:29:49 +0100

gimp-print (5.0.0-alpha3-1) unstable; urgency=low

  * New upstream alpha release.
  * Build a static libgimpprintui only.
  * Remove libgimpprintui packages.
  * libgimpprint-doc: Fix documentation installation for new API
    reference and developer's reference.
  * cupsys-driver-gimpprint: remove PPDs on removal.

 -- Roger Leigh <rleigh@debian.org>  Sun, 23 May 2004 12:41:20 +0100

gimp-print (5.0.0-alpha2-1) unstable; urgency=low

  * New upstream alpha release.

 -- Roger Leigh <rleigh@debian.org>  Thu,  8 Apr 2004 20:08:11 +0100

gimp-print (5.0.0-alpha1-2) unstable; urgency=low

  * Synchronise packaging changes from Debian 4.2.6-4 packaging:
    - Change Recommends on gimpprint-locales to Suggests.