@@ -1,2 +1,0 @@
-debian/install/usr/lib/libgutenprintui.so.*  usr/lib
-debian/install/usr/lib/libgutenprintui-*.so  usr/lib
