@@ -5,8 +5,11 @@ gutenprint (5.0.0-beta3-1) unstable; urgency=low
     - Install the plug-in into the GIMP 2.0 plug-in directory rather
       than the 1.2 directory.
     - Don't install a duplicate copy of FAQ.html.
+  * Remove libgutenprintui packages, since libgimp1.2 and gimp1.2
+    are no longer available in Debian unstable.
+  * Remove libgtk1.2 build dependency.
 
- -- Roger Leigh <rleigh@debian.org>  Tue, 16 Nov 2004 22:40:23 +0000
+ -- Roger Leigh <rleigh@debian.org>  Sun, 06 Feb 2005 20:22:36 +0000
 
 gutenprint (5.0.0-beta2-1) unstable; urgency=low
 
